--- a/Module_Trust/Views/ViewA.xaml
+++ b/Module_Trust/Views/ViewA.xaml
@@ -7,8 +7,33 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
               xmlns:prism="http://prismlibrary.com/"  
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True" 
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation">
+    
+    
+    
     <Grid>
-        <TextBlock Text="View A" FontSize="38" />
+        <telerik:RadGridView   x:Name="GridView"    
+								 AutoGenerateColumns="False" ShowGroupPanel="False"  
+								RowIndicatorVisibility="Collapsed"  
+								 BorderThickness="1" GridLinesVisibility="Horizontal" CanUserFreezeColumns="False"
+								 HorizontalGridLinesBrush="Black"  >
+          
+            <telerik:RadGridView.Columns>
+                <telerik:GridViewDataColumn Header="TrustNumber" DataMemberBinding="{Binding  TrustNumber}" Width="*"  />
+                
+
+                <telerik:GridViewDataColumn Header="First Name" DataMemberBinding="{Binding  TrustorFirstName}" Width="*"  />
+                <telerik:GridViewDataColumn Header="Last Name" DataMemberBinding="{Binding TrustorLastName}" Width="*"/>
+
+                <telerik:GridViewDataColumn Header="Birth Year" DataMemberBinding="{Binding  TrustorBirthYear}" Width="*"  />
+
+                <telerik:GridViewDataColumn Header="Sp. First Name" DataMemberBinding="{Binding SpouseFirstName}" Width="*"/>
+
+                <telerik:GridViewDataColumn Header="Sp. First Last" DataMemberBinding="{Binding  SpouseLastName}" Width="*"  />
+                <telerik:GridViewDataColumn Header="Sp. BirthYear" DataMemberBinding="{Binding SpouseBirthYear}" Width="*"/>
+
+            </telerik:RadGridView.Columns>
+        </telerik:RadGridView>
     </Grid>
 </UserControl>
