--- a/SCClientApp/App.xaml
+++ b/SCClientApp/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="SSClientApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Modules">
+             xmlns:local="clr-namespace:SCClientApp">
     <Application.Resources>
          
     </Application.Resources>
