Menu by editioninfo

--- a/SCClientApp/Views/MainWindow.xaml
+++ b/SCClientApp/Views/MainWindow.xaml
@@ -8,13 +8,32 @@
     <Window.Resources>
         <Style TargetType="TabItem">
             <Setter Property="Header" Value="{Binding DataContext.Title}" />
+            
+        </Style>
+        <Style x:Key="MenuItemStyle" TargetType="{x:Type MenuItem}">
+            <Setter Property="Command" Value="{Binding OnSelected}" />
         </Style>
     </Window.Resources>
     
     <Grid>
         <DockPanel LastChildFill="True">
-           
-             
+
+            <DockPanel LastChildFill="True" >
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+                    <Menu IsMainMenu="True" ItemsSource="{Binding ParentItems}" Width="525">
+                        <Menu.ItemTemplate>
+                            <HierarchicalDataTemplate ItemContainerStyle="{StaticResource MenuItemStyle}">
+                                <ContentPresenter Content="{Binding Text}" RecognizesAccessKey="True" />
+                                <HierarchicalDataTemplate.ItemsSource>
+                                    <Binding Path="SubItems" />
+                                </HierarchicalDataTemplate.ItemsSource>
+                            </HierarchicalDataTemplate>
+                        </Menu.ItemTemplate>
+                    </Menu>
+                </StackPanel>
+                <Grid />
+            </DockPanel>
+            
             <TabControl Grid.Row="1" Margin="10" prism:RegionManager.RegionName="ContentRegion"  />
         </DockPanel>
          
