--- a/Module_Organization/Views/DefaultView.xaml
+++ b/Module_Organization/Views/DefaultView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Module_Organization.Views.ViewB"
+﻿<UserControl x:Class="Module_Organization.Views.DefaultView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
